[gd_scene load_steps=4 format=3 uid="uid://dyxitjmkr2gmx"]

[ext_resource type="Script" uid="uid://bdpu21o7156jd" path="res://scenes/in_game_menu/in_game_menu.gd" id="1_mis6w"]
[ext_resource type="FontFile" uid="uid://cl116rahkaxh4" path="res://art/Xolonium-Regular.ttf" id="2_ftyy5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjhrs"]
bg_color = Color(0, 0.239216, 0.305882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.751324, 0.838248, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mis6w")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fjhrs")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ftyy5")
theme_override_font_sizes/font_size = 25
text = "Menu"
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ftyy5")
theme_override_font_sizes/font_size = 20
text = "Continue"
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ftyy5")
theme_override_font_sizes/font_size = 20
text = "Quit"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
